--- a/server/config/.env.example
+++ b/server/config/.env.example
@@ -1,3 +1,6 @@
 MONGO_URI=mongodb://localhost:27017/covid19
 PORT=5000
 TOKEN_SECRET=hackers
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_CONTACT=
