--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "twilio": "^3.51.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
